--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
             background-color:rgb(0, 255, 247);
             font-size:25px;
         }
-        /* Makes all h2s have a black background */
+        /* Heading Background Color setting*/
         h2 {
             background-color: rgb(0, 0, 0);
         }
         
-        /* Specifically makes the stars h2 have yellow text */
+        /* Star Header Color */
         #star-header {
             color: rgb(245, 255, 0);
         }
+       /* Black Hole Header Color */
         #BlackHole-header {
             color: rgb(245, 255, 0);
         }
+       /* Rocket Header */
         #Rocket-header {
             color: rgb(245, 255, 0);
         }
