--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         #Rocket-header {
             color: rgb(245, 255, 0);
         }
+        /* Text alignment*/
         #text {
          text-align:center 
       
@@ -32,7 +33,7 @@
     </style>
 </head>
 <body>
-  <h1>
+    <h1>
       SPACE:The Universe and Beyond
   </h1>
   <h2 id="star-header">Table of Contents:</h2>
